# mywebapp

./: .env.example  .gitignore  .yamllint  Dockerfile  README.md  coverage.xml  docker-compose.yml  migrate.py  pyproject.toml
.github/workflows/: ci.yml
app/: database.py  main.py
app/routers/: health.py  items.py
deploy/: init.sql  install.sh  install.sh.save  mywebapp.nginx  mywebapp.service  nginx.conf  setup-runner.sh  sudoers-operator
tests/: conftest.py  test_health.py  test_items.py  test_root.py
