[project]
name = "mywebapp"
version = "0.1.0"
description = "Simple Inventory Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "mysql-connector-python>=9.0.0",
]

[project.scripts]
mywebapp = "app.main:main"
migrate = "migrate:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--strict-markers -v --cov=app --cov-report=term-missing --cov-report=html --cov-report=xml --cov-fail-under=40"

[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py", "tests/*"]

[tool.coverage.report]
show_missing = true
precision = 2

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  
    "W",   
    "F",   
    "I",   
    "B",   
    "C4",  
    "UP",  
]
ignore = [
    "E501", 
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
"migrate.py" = ["E402"]